--- a/app/src/main/res/layout/activity_auto_flash.xml
+++ b/app/src/main/res/layout/activity_auto_flash.xml
@@ -15,6 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:clickable="true"
         android:onClick="finish"
         android:text="@string/exit"
         android:textColor="@color/colorPrimaryDark"
