Add a PreferenceActivity. Also remove Google repository

--- a/app/src/main/res/layout/activity_auto_flash.xml
+++ b/app/src/main/res/layout/activity_auto_flash.xml
@@ -19,6 +19,7 @@
         android:onClick="finish"
         android:text="@string/exit"
         android:textColor="@color/colorPrimaryDark"
+        android:focusable="true"
         android:textSize="36sp" />
 
 </FrameLayout>
