--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,16 +8,16 @@
             android:title="@string/action_settings" />
     </group>
 
-    <item android:title="@string/communicate">
+    <item android:title="@string/feedback">
         <menu>
             <item
                 android:id="@+id/nav_share"
                 android:icon="@drawable/ic_menu_share"
                 android:title="@string/share" />
             <item
-                android:id="@+id/nav_send"
+                android:id="@+id/nav_send_github"
                 android:icon="@drawable/ic_menu_send"
-                android:title="@string/send" />
+                android:title="@string/send_github" />
         </menu>
     </item>
 
