--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,7 +10,4 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.fake.android.torchlight.MainActivity"
-    tools:showIn="@layout/app_bar_main">
-
-
-</RelativeLayout>
+    tools:showIn="@layout/app_bar_main" />
