--- a/app/src/main/res/layout/activity_auto_flash.xml
+++ b/app/src/main/res/layout/activity_auto_flash.xml
@@ -11,8 +11,7 @@
     tools:context="com.fake.android.torchlight.AutoFlashActivity"
     tools:ignore="Overdraw">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <TextView android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:clickable="true"
