--- a/app/src/main/res/layout/torchlight_widget.xml
+++ b/app/src/main/res/layout/torchlight_widget.xml
@@ -7,8 +7,7 @@
     android:orientation="vertical"
     android:padding="@dimen/widget_margin">
 
-    <TextView
-        android:id="@+id/appwidget_text"
+    <TextView android:id="@+id/appwidget_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
@@ -22,12 +21,10 @@
         android:textStyle="bold"
         tools:ignore="PrivateResource" />
 
-    <ImageButton
-        android:id="@+id/imageButton"
+    <ImageButton android:id="@+id/imageButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:contentDescription="@string/torchlight_is_off"
         app:srcCompat="@drawable/ic_sunny_black" />
-
 </LinearLayout>
