--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,20 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_manage"
+        <item android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
             android:title="@string/action_settings" />
     </group>
 
     <item android:title="@string/feedback">
         <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="@string/share" />
-            <item
-                android:id="@+id/nav_send_github"
+            <item android:id="@+id/nav_share" android:icon="@drawable/ic_menu_share" android:title="@string/share" />
+            <item android:id="@+id/nav_send_github"
                 android:icon="@drawable/ic_menu_send"
                 android:title="@string/send_github" />
         </menu>
