--- a/app/src/main/res/xml/pref_information.xml
+++ b/app/src/main/res/xml/pref_information.xml
@@ -1,13 +1,8 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <Preference
-        android:persistent="false"
-        android:summary="@string/pref_information_app_description" />
+    <Preference android:persistent="false" android:summary="@string/pref_information_app_description" />
 
-    <Preference
-        android:key="app_version"
+    <Preference android:key="app_version"
         android:persistent="false"
         android:summary=""
         android:title="@string/pref_title_information_version" />
-
-
 </PreferenceScreen>
