--- a/app/src/main/res/layout/activity_auto_flash.xml
+++ b/app/src/main/res/layout/activity_auto_flash.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.fake.android.torchlight.AutoFlashActivity"
+    tools:context=".AutoFlashActivity"
     tools:ignore="Overdraw">
 
     <TextView android:layout_width="wrap_content"
