--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,5 +9,5 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.fake.android.torchlight.MainActivity"
+    tools:context="de.kb1000.flashlight.MainActivity"
     tools:showIn="@layout/app_bar_main" />
